# Ditto

./: .gitignore  CMakeLists.txt  README.md  cloc.sh
documents/: README-AE.md
experiments/: CMakeLists.txt  adaptive_simulator.cc  compile_opt_checker.cc  controller.py  init.cc  init.h  memcached.cc  memcached.h  modify_config.py  modify_single_config.py  run_client.cc  run_client.h  simulator.cc  workload.cc  workload.h
experiments/configs/: client_conf_cliquemap.json  client_conf_cliquemap_precise.json  client_conf_non.json  client_conf_precise.json  client_conf_sample.json  client_conf_sample_adaptive.json  client_conf_sample_adaptive_heavy.json  client_conf_sample_adaptive_naive.json  client_conf_sample_naive.json  server_conf_cliquemap.json  server_conf_cliquemap_precise.json  server_conf_non.json  server_conf_precise.json  server_conf_sample.json  server_conf_sample_adaptive.json  server_conf_sample_adaptive_heavy.json  server_conf_sample_adaptive_naive.json  server_conf_sample_naive.json
experiments/elasticity_hr_cpu/: run_client.sh  run_client_master.sh  run_controller.sh
experiments/elasticity_hr_mem/: run_client.sh  run_client_master.sh  run_controller.sh
experiments/elasticity_tpt_mem/: run_client.sh  run_controller.sh  run_server.sh
experiments/eviction_cont_throughput/: run_client.sh  run_controller.sh  run_server.sh
experiments/hit_rate/: run_client.sh  run_client_master.sh  run_client_mix_master.sh  run_controller.sh  run_server.sh
experiments/micro_throughput/: run_client.sh  run_controller.sh  run_server.sh
experiments/redis_test/: redis-instance-controller.py  redis-instance-starter.py  redis-large.conf.templ  redis_perf.cc  redis_perf_tpt.cc  run_instance_controller.sh  run_redis_client.sh  run_redis_client_tpt.sh  run_redis_cluster.sh  utils.h
experiments/results/: fig18.json  fig20.json  fig21.json
experiments/scripts/: README.md  cluster_setting.py  download_workloads.py  fig1.py  fig13.py  fig14.py  fig15_16.py  fig17.py  fig18.py  fig19.py  fig2.py  fig20.py  fig21.py  fig22.py  fig23.py  fig24-more.py  fig24.py  fig25-more.py  fig25.py  kick-the-tires.py  run_all.sh  run_small_all.sh  shell_settings.sh  time.sh
experiments/scripts/more_results/: fig24-ibm044-10m.json  fig24-twitter020-10m.json  fig24-twitter042-10m.json  fig24-twitter049-10m.json  fig25-ycsba.json  fig25-ycsbb.json  fig25-ycsbd.json
experiments/scripts/utils/: cmd_manager.py  plots.py  settings.py  styles.py  utils.py
experiments/utils/: utils.sh
experiments/workload_throughput/: run_client.sh  run_controller.sh
experiments/workloads/: download_all.sh  download_all_from_peer.sh  download_from_peer.sh  download_gdrive.py  download_workloads.sh  modify.py  workload.ipynb
experiments/ycsb_fiber/: run_controller.sh
experiments/ycsb_test/: run_client.sh  run_client_master.sh  run_controller.sh  run_server.sh
scripts/: cloudlab-profile.xml  resize_partition.sh  setkey.py  setup-env.sh
src/: CMakeLists.txt  client.cc  client.h  client_mm.cc  client_mm.h  cms.h  debug.h  dmc_table.cc  dmc_table.h  dmc_utils.cc  dmc_utils.h  fifo_history.cc  fifo_history.h  freq_cache.h  ib.cc  ib.h  lw_history.h  nm.cc  nm.h  priority.cc  priority.h  rlist.cc  rlist.h  server.cc  server.h  server_mm.cc  server_mm.h
tests/: CMakeLists.txt  dmc_test.cc  dmc_test.h  test_client.cc  test_client.h  test_client_mm.cc  test_cms.cc  test_conf.json  test_conf_client.json  test_conf_server.json  test_dmc_utils.cc  test_nm.cc  test_nm.h  test_rlist.cc  test_rlist.h  test_server.cc  test_server.h  test_server_mm.cc  test_server_mm.h
